@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop">
-  <id>system-config-printer.desktop</id>
+  <id>org.fedoraproject.systemconfigprinter</id>
   <metadata_license>CC0</metadata_license>
   <project_license>GPL-2.0+</project_license>
-  <_name>Print Settings</_name>
-  <_summary>Configure printer queues</_summary>
+  <name>Print Settings</name>
+  <summary>Configure printer queues</summary>
 
   <description>
-    <_p>With system-config-printer you can add, edit and delete
+    <p>With system-config-printer you can add, edit and delete
     printer queues. It allows you to choose the connection method and
-    the printer driver.</_p>
+    the printer driver.</p>
 
-    <_p>For each queue, you can adjust the default page size and other
+    <p>For each queue, you can adjust the default page size and other
     driver options, as well as seeing ink/toner levels and status
-    messages.</_p>
+    messages.</p>
   </description>
 
   <screenshots>
-    <screenshot type="default" width="624" height="351">https://raw.githubusercontent.com/zdohnal/system-config-printer/master/data/screenshot-mainwindow.png</screenshot>
-    <screenshot width="752" height="423">https://raw.githubusercontent.com/zdohnal/system-config-printer/master/data/screenshot-properties.png</screenshot>
+    <screenshot type="default">
+      <caption>Main window</caption>
+      <image type="source"  width="624" height="351">https://raw.githubusercontent.com/zdohnal/system-config-printer/master/data/screenshot-mainwindow.png</image>
+    </screenshot>
+    <screenshot>
+      <caption>Printer properties</caption>
+      <image type="source" width="752" height="423">https://raw.githubusercontent.com/zdohnal/system-config-printer/master/data/screenshot-properties.png</image>
+    </screenshot>
   </screenshots>
 
   <url type="homepage">https://github.com/zdohnal/system-config-printer/</url>
