@@ -1,5 +1,7 @@
 1.5.11 changes
 --------------
+- fix other issues in system-config-printer.appdata.xml to be completely valid 
+  for new format
 - make the appstream file validate with version >= 0.6 (https://github.com/zdohnal/system-config-printer/issues/97)
 - fixes for scp-dbus-services (https://github.com/zdohnal/system-config-printer/pull/96)
 - use ValueError instead of ImportError (https://github.com/zdohnal/system-config-printer/pull/95)
